# CodeExamples

FastAPI/Api/: pyproject.toml
FastAPI/Api/bluebox_api/: config.py  main_fastapi.py
FastAPI/Api/bluebox_api/api/v1/: app.py  dependencies.py  middlewares.py
FastAPI/Api/bluebox_api/api/v1/auth/: dependencies.py  errors.py  routers.py  schemas.py
FastAPI/Api/bluebox_api/api/v1/user/: dependencies.py  errors.py  routers.py  schemas.py
FastAPI/Api/bluebox_api/infrastructure/services/auth/api_keys/: errors.py  services.py
FastAPI/Services/Auth/: README.md  pyproject.toml
FastAPI/Services/Auth/bluebox_auth/: config.py  main_grpc.py
FastAPI/Services/Auth/bluebox_auth/domain/: usecase.py
FastAPI/Services/Auth/bluebox_auth/domain/api_key/: entities.py  errors.py  repositories.py  usecase.py
FastAPI/Services/Auth/bluebox_auth/infrastructure/postgresql/: database.py
FastAPI/Services/Auth/bluebox_auth/rpc/api_keys/: data_mappers.py  dependencies.py  implementation.py  setup.py
FastAPI/Services/Auth/proto/: api_keys_objects.proto  api_keys_services.proto
FastAPI/Services/Users/: README.md  pyproject.toml
FastAPI/Services/Users/bluebox_users/: main_grpc.py
FastAPI/Services/Users/bluebox_users/domain/user/: entities.py  repositories.py  usecase.py
FastAPI/Services/Users/bluebox_users/infrastructure/postgresql/: database.py
FastAPI/Services/Users/bluebox_users/rpc/users/: data_mappers.py  dependencies.py  implementation.py  setup.py
FastAPI/Services/Users/proto/: users_objects.proto  users_services.proto
(+14 files in other folders)
